# QtVirtualFPGA

./: CMakeLists.txt  README.md  top_wrapper.v
debug/network/: child  lo_UDP7755_child.pcapng  lo_UDP7755_external.pcapng
forms/: fileselectdialog.ui  graderdialog.ui  mainwindow.ui  settingsdialog.ui  sevensegmentdisplay.ui
include/: abstractprocess.h  customcentralwidget.h  fileselectdialog.h  graderdialog.h  indexedbutton.h  indexedswitch.h  linuxprocess.h  mainwindow.h  model.h  modelthread.h  settingsdialog.h  sevensegmentdisplay.h  version.h  versionmessage.h  windowsprocess.h  wslprocess.h
resources/: resources.qrc
resources/dev/: CMakeCache.txt  CMakeLists.txt  UDC.v  VirtualFPGAProject  cmake_install.cmake  sim_main.cpp  top_wrapper.v  xvlog.pb
resources/dev/xsim.dir/work/: @u@d@c.sdb  top_wrapper.sdb  work.rlx
resources/examples/LedCPUwithRAM/: LedCPUcore.v  LedCPUwithRAM.v  LedCPUwithRAM_tb.v  debounce.v  mem1R1W.v  progLogic.v  top_wrapper.v  xvlog.pb
resources/examples/LedCPUwithRAM/xsim.dir/work/: @led@c@p@ucore.sdb  @led@c@p@uwith@r@a@m.sdb  top_wrapper.sdb  work.rlx
resources/examples/LedCPUwithROM/: LedCPUcore.v  LedCPUwithROM.v  LedCPUwithROM_tb.v  ROM.v  timer.v
resources/examples/VGAwithSwitch/: VGAwithSwitch.v  pixelGeneration.v  vgaSync.v  xvlog.pb
resources/examples/VGAwithSwitch/xsim.dir/work/: @v@g@awith@switch.sdb  pixel@generation.sdb  vga@sync.sdb  work.rlx
resources/projectFiles/: CMakeLists.txt  UDPClient.hpp  sim_main.cpp  top_wrapper_template.v  xvlog.pb
resources/projectFiles/xsim.dir/work/: four@digit@seven@segment.sdb  top_wrapper.sdb  work.rlx
src/: customcentralwidget.cpp  fileselectdialog.cpp  graderdialog.cpp  indexedbutton.cpp  indexedswitch.cpp  linuxprocess.cpp  mainwindow.cpp  model.cpp  modelthread.cpp  settingsdialog.cpp  sevensegmentdisplay.cpp  windowsprocess.cpp  wslprocess.cpp
